--- a/Ativ-Banda-main/Ativ-Banda-main/CSS/home.css
+++ b/Ativ-Banda-main/Ativ-Banda-main/CSS/home.css
@@ -5,11 +5,9 @@
 }
 
 header {
-  background-image: linear-gradient(
-    to right,
-    rgb(56, 53, 53),
-    rgba(0, 0, 0, 0.932)
-  );
+  background-image: linear-gradient(to right,
+      rgb(56, 53, 53),
+      rgba(0, 0, 0, 0.993));
 }
 
 .h-title {
@@ -43,24 +41,6 @@ header a:hover {
   transform: scale(1.1);
 }
 
-main {
-  
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("img/Picassos\ Falsos\ 1987.jpg");
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  padding-bottom: 50px;
-}
-
-.texto h1,
-h6 {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  color: white;
-}
-
 .pablo {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -70,17 +50,15 @@ h6 {
   justify-content: center;
   border: 3px solid rgb(190, 158, 31);
   margin: 30px 30px 0 20px;
+  border-radius: 20px;
   box-shadow: 10px 10px 0 rgba(230, 160, 21, 0.784);
   transition: all.3s ease-in-out;
-  background-color: aliceblue;
-  color: black;
+  overflow: hidden;
 }
 
 .pablo:hover {
   box-shadow: 0px 0px 20px rgb(238, 255, 0);
   transform: scale(1.1);
- background: none;
-  text-shadow: 0px 0px 10px rgb(255, 255, 255);
 }
 
 .img-pablo {
@@ -109,21 +87,30 @@ h6 {
 p {
   margin-bottom: 7px;
   font-size: x-large;
-  color: aliceblue;
 }
 
 i {
   font-size: 20px;
 }
 
-footer {
-  background-color: rgb(56, 53, 53);
-  color: white;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  font-size: 18px;
-  height: 15vh;
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
 
+  to {
+    transform: rotate(360deg);
+  }
 }
 
+
+.roda {
+  max-width: 30%;
+  animation: spin 2s linear infinite;
+}
+
+.div-roda {
+  float: right;
+  display: flex;
+  justify-content: center;
+}
