--- a/Ativ-Banda-main/Ativ-Banda-main/CSS/historia.css
+++ b/Ativ-Banda-main/Ativ-Banda-main/CSS/historia.css
@@ -1,22 +1,25 @@
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+body{
 }
 
 header {
-  background-image: linear-gradient(
-    to right,
-    rgb(56, 53, 53),
-    rgba(0, 0, 0, 0.932)
-  );
+  background-image: linear-gradient(to right,
+      rgb(56, 53, 53),
+      rgba(0, 0, 0, 0.993));
 }
 
 .h-title {
-  font-size: 20px;
+  font-size: 40px;
   display: flex;
   justify-content: center;
-  color: rgb(226, 203, 68);
+  color: rgb(255, 255, 255);
   margin-bottom: 10px;
   text-shadow: 0px 0px 20px rgb(233, 170, 52);
   letter-spacing: 10px;
@@ -43,33 +46,17 @@ header a:hover {
   transform: scale(1.1);
 }
 
-
-.imagem{
-  margin: 80px;
-  width: 38%;
-  max-height: 100%;
-  border: 1px solid black;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  border-radius: 13px;
+.comeco-main{
+  background-color: beige;
 }
 
-img{
-  max-width: 90%;
-padding: 20px;
+
+main a{
+    text-shadow: 0px 0px 5px rgb(233, 170, 52);
+    color: rgb(0, 0, 0);
+    text-decoration: none;
 }
 
-.subli{
-  margin-left: 5px;
-  font-size: smaller;
-}
-
-ul{
-  border: 1px solid black;
-  list-style: none;
-}
-
-li{
-  font-family: Arial, Helvetica, sans-serif;
+p{
+  margin: 5px;
 }
