--- a/Ativ-Banda-main/CSS/historia.css
+++ b/Ativ-Banda-main/CSS/historia.css
@@ -3,10 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Inter";
 }
 
-body{
+p,h2,h3,li{
+  color: rgb(255, 255, 255);
 }
 
 header {
@@ -16,7 +17,7 @@ header {
 }
 
 .h-title {
-  font-size: 40px;
+  font-size: 25px;
   display: flex;
   justify-content: center;
   color: rgb(255, 255, 255);
@@ -46,6 +47,16 @@ header a:hover {
   transform: scale(1.1);
 }
 
+
+main{
+background-image: linear-gradient(rgba(0, 0, 0, 0.6 ), rgba(0, 0, 0, 0.6)),
+    url("img/banda\ picassos.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  padding-bottom: 50px;
+}
 .comeco-main{
   background-color: beige;
 }
@@ -53,10 +64,17 @@ header a:hover {
 
 main a{
     text-shadow: 0px 0px 5px rgb(233, 170, 52);
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
 p{
-  margin: 5px;
+  margin: 10px;
+  font-size: 3vh;
+  text-wrap: wrap;
+}
+
+h3{
+  font-size:4vh;
+  margin: 10px;
 }
