mudei algumas pags e fiz a banda

--- a/CSS/banda.css
+++ b/CSS/banda.css
@@ -43,6 +43,44 @@ header a:hover {
   transform: scale(1.1);
 }
 
+main {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.795), rgba(0, 0, 0, 0.789)),
+    url(img/picassos-falsoslaranja.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 85vh;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 25px;
+  text-align: center;
+}
+
+div img{
+width: 250px;
+}
+
+ul{
+display: flex;
+gap: 30px;
+}
+
+li{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+border: 2px solid rgba(217, 149, 100, 0.666);
+border-radius: 8px;
+width: 300px;
+}
+
+div{
+margin: auto;
+}
 
 i {
   font-size: 20px;
@@ -56,6 +94,4 @@ footer {
   display: flex;
   font-size: 18px;
   height: 15vh;
-
 }
-
