--- a/CSS/musica.css
+++ b/CSS/musica.css
@@ -43,6 +43,30 @@ header a:hover {
   transform: scale(1.1);
 }
 
+main {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("img/baixados.jpg");
+}
+
+.albuns {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.album iframe{
+  width: 110vh;
+  height: 80vh;
+  margin-bottom: 40px;
+}
+
+div h1 {
+  color: rgb(252, 208, 127);
+  text-shadow: goldenrod 0px 0px 10px;
+}
+
 
 i {
   font-size: 20px;
@@ -56,6 +80,4 @@ footer {
   display: flex;
   font-size: 18px;
   height: 15vh;
-
 }
-
